# Crimson-Deck

./: .gitignore  LICENSE  README.md  build_and_install_android.sh  build_android.sh  build_server.sh
.antigravitycli/: 6fa370ba-8ddd-467d-9ee9-b4225cb8f8db.json
android/: build.gradle.kts  config.json.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/crimson/deck/: MainActivity.kt
android/app/src/main/java/com/crimson/deck/data/webrtc/: H264Decoder.kt  WebRtcManager.kt
android/app/src/main/java/com/crimson/deck/data/websocket/: WebSocketManager.kt
android/app/src/main/java/com/crimson/deck/ui/screens/: ConnectScreen.kt  SettingsScreen.kt  StreamScreen.kt
android/app/src/main/java/com/crimson/deck/ui/viewmodel/: AgentViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
docs/: CHANGELOG.md  Getting-Started.md  Home.md  Input-Emulation.md  Macros-and-Automation.md  System-Architecture.md  System-Robustness-and-Troubleshooting.md  Video-Streaming-Engine.md  robust_implementation_plan.md
server/: config.json.example
server/go/: go.mod  go.sum  main.go
server/rust/: Cargo.toml  README.md
server/rust/src/: main.rs
server/rust/src/capture/: mod.rs  wayland.rs  x11.rs
server/rust/src/input/: mod.rs  uinput.rs
server/rust/src/ipc/: mod.rs  uds.rs
