[package]
name = "crimson-deck-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# H.264 temporal encoder
openh264 = "0.4.0"

# Async runtime for systems networking and event handling
tokio = { version = "1.35", features = ["full"] }


# Safe X11 bindings using XCB protocol layers with SHM features enabled
xcb = { version = "1.2", features = ["shm"] }

# C standard library definitions for safe FFI bindings
libc = "0.2.150"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logger
log = "0.4.20"
env_logger = "0.10.1"
